feat: add supplied images and gallery

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <a class="btn btn-tertiary" href="#network">Explore the Network</a>
         </div>
       </div>
+      <div class="hero-media" data-animate>
+        <img src="assets/nyfcr-logo.jpg" alt="NYFCR logo" />
+      </div>
     </section>
 
     <section id="mission" class="section">
@@ -114,6 +117,15 @@
             <h4>College Republicans of America</h4>
             <p>Chartered nationally with the CRA as of 2024.</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="section section-dark">
+      <div class="container" data-animate>
+        <h2>From the Field</h2>
+        <div class="gallery">
+          <img src="assets/nyfcr-event.jpg" alt="NYFCR event" />
         </div>
       </div>
     </section>
