feat: add additional NYFCR logo image

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <h2>From the Field</h2>
         <div class="gallery">
           <img src="assets/nyfcr-event.jpg" alt="NYFCR event" />
+          <img src="assets/nyfcr-logo-2.jpg" alt="NYFCR logo" />
         </div>
       </div>
     </section>
