feat: add third NYFCR logo image

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <div class="gallery">
           <img src="assets/nyfcr-event.jpg" alt="NYFCR event" />
           <img src="assets/nyfcr-logo-2.jpg" alt="NYFCR logo" />
+          <img src="assets/nyfcr-logo-3.jpg" alt="NYFCR logo" />
         </div>
       </div>
     </section>
