--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
           <img src="assets/nyfcr-event.jpg" alt="NYFCR event" />
           <img src="assets/nyfcr-logo-2.jpg" alt="NYFCR logo" />
           <img src="assets/nyfcr-logo-3.jpg" alt="NYFCR logo" />
+          <img src="assets/nyfcr-vintage-logo.jpg" alt="NYFCR vintage logo" />
         </div>
       </div>
     </section>
