--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           <img src="assets/nyfcr-logo-2.jpg" alt="NYFCR logo" />
           <img src="assets/nyfcr-logo-3.jpg" alt="NYFCR logo" />
           <img src="assets/nyfcr-vintage-logo.jpg" alt="NYFCR vintage logo" />
+          <img src="assets/nyfcr-group.jpg" alt="NYFCR group" />
         </div>
       </div>
     </section>
