feat: add NYFCR conference graphic

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           <img src="assets/nyfcr-logo-3.jpg" alt="NYFCR logo" />
           <img src="assets/nyfcr-vintage-logo.jpg" alt="NYFCR vintage logo" />
           <img src="assets/nyfcr-group.jpg" alt="NYFCR group" />
+          <img src="assets/nyfcr-conference.jpg" alt="NYFCR conference" />
         </div>
       </div>
     </section>
