feat: add NYFCR speaker graphic

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <img src="assets/nyfcr-vintage-logo.jpg" alt="NYFCR vintage logo" />
           <img src="assets/nyfcr-group.jpg" alt="NYFCR group" />
           <img src="assets/nyfcr-conference.jpg" alt="NYFCR conference" />
+          <img src="assets/nyfcr-speaker.jpg" alt="NYFCR speaker" />
         </div>
       </div>
     </section>
