feat: add second NYFCR speaker graphic

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <img src="assets/nyfcr-group.jpg" alt="NYFCR group" />
           <img src="assets/nyfcr-conference.jpg" alt="NYFCR conference" />
           <img src="assets/nyfcr-speaker.jpg" alt="NYFCR speaker" />
+          <img src="assets/nyfcr-speaker-2.jpg" alt="NYFCR speaker" />
         </div>
       </div>
     </section>
