feat: add NYFCR press release graphic

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <img src="assets/nyfcr-conference.jpg" alt="NYFCR conference" />
           <img src="assets/nyfcr-speaker.jpg" alt="NYFCR speaker" />
           <img src="assets/nyfcr-speaker-2.jpg" alt="NYFCR speaker" />
+          <img src="assets/nyfcr-press.jpg" alt="NYFCR press release" />
         </div>
       </div>
     </section>
