feat: add additional NYFCR photo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           <img src="assets/nyfcr-speaker.jpg" alt="NYFCR speaker" />
           <img src="assets/nyfcr-speaker-2.jpg" alt="NYFCR speaker" />
           <img src="assets/nyfcr-press.jpg" alt="NYFCR press release" />
+          <img src="assets/nyfcr-photo.jpg" alt="NYFCR photo" />
         </div>
       </div>
     </section>
