feat: add NYFCR endorsement graphic

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
           <img src="assets/nyfcr-speaker-2.jpg" alt="NYFCR speaker" />
           <img src="assets/nyfcr-press.jpg" alt="NYFCR press release" />
           <img src="assets/nyfcr-photo.jpg" alt="NYFCR photo" />
+          <img src="assets/nyfcr-endorsement.jpg" alt="NYFCR endorsement" />
         </div>
       </div>
     </section>
