feat: add NER showcase graphic

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           <img src="assets/nyfcr-press.jpg" alt="NYFCR press release" />
           <img src="assets/nyfcr-photo.jpg" alt="NYFCR photo" />
           <img src="assets/nyfcr-endorsement.jpg" alt="NYFCR endorsement" />
+          <img src="assets/nyfcr-ner-showcase.jpg" alt="NYFCR NER showcase" />
         </div>
       </div>
     </section>
